# Advanced-Chat-Server

./: CMakeLists.txt  README.md  build.bat  build_server.bat  chat.db  cleanup_project.bat  client.py  download_sqlite.bat  init_database.py  organize_build.bat  test_database.py
src/: CMakeLists.txt  ChatRoom.cpp  ChatRoom.hpp  ChatRoomManager.cpp  ChatRoomManager.hpp  Command.cpp  Command.hpp  Commands.cpp  Commands.hpp  Database.cpp  Database.hpp  InteractiveClient.cpp  Logging.cpp  Logging.hpp  PreparedStatement.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  SessionManager.cpp  SessionManager.hpp  SimpleClient.cpp  SimpleServer.cpp  ThreadPool.cpp  ThreadPool.hpp  UserManager.cpp  UserManager.hpp  main.cpp
